automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -42,11 +42,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "January\n"
+     ]
+    }
+   ],
    "source": [
-    "travel_month = None"
+    "travel_month = \"January\"\n",
+    "print(travel_month)"
    ]
   },
   {
@@ -58,9 +67,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'January'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "travel_month # \"January\""
    ]
@@ -74,18 +94,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "number_of_weeks = None"
+    "number_of_weeks = 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "number_of_weeks # 3"
    ]
@@ -99,11 +130,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "number_of_weeks # 5"
+    "number_of_weeks = 5\n",
+    "number_of_weeks = str(number_of_weeks)\n",
+    "print(number_of_weeks)"
    ]
   },
   {
@@ -122,11 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I will be traveling5weeks starting in the month ofJanuary\n"
+     ]
+    }
+   ],
    "source": [
-    "travelling_schedule = None"
+    "travelling_schedule = \"I will be traveling\" + number_of_weeks +\"weeks starting in the month of \" + travel_month\n",
+    "print(travelling_schedule)"
    ]
   },
   {
@@ -160,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
